sourceCompatibility = '1.8'
targetCompatibility = '1.8'

dependencies {
    compile project(':LauncherCore')
    compileOnly 'org.apache.httpcomponents:httpclient:4.5.7'
    compileOnly 'io.netty:netty-codec-http:4.1.36.Final'
}
